logs/products.webserverauth.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/WebServerAuth'...
Listing './lib/python3.5/site-packages/Products/WebServerAuth/Extensions'...
Listing './lib/python3.5/site-packages/Products/WebServerAuth/profiles'...
Listing './lib/python3.5/site-packages/Products/WebServerAuth/profiles/default'...
Listing './lib/python3.5/site-packages/Products/WebServerAuth/profiles/uninstall'...
Listing './lib/python3.5/site-packages/Products/WebServerAuth/skins'...
Listing './lib/python3.5/site-packages/Products/WebServerAuth/skins/webserverauth'...
Listing './lib/python3.5/site-packages/Products/WebServerAuth/tests'...
Compiling './lib/python3.5/site-packages/Products/WebServerAuth/tests/test_extraction.py'...
***   File "./lib/python3.5/site-packages/Products/WebServerAuth/tests/test_extraction.py", line 81
    """Assert choosing to not strip the domain off the end of a domain\user works."""
    ^
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 63-64: truncated \uXXXX escape

Listing './lib/python3.5/site-packages/Products/WebServerAuth/www'...
Listing './lib/python3.5/site-packages/Products.WebServerAuth-1.7.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
